--- a/app/globals.css
+++ b/app/globals.css
@@ -48,8 +48,8 @@
   /* #1e40af Deep Blue */
   --primary-foreground: 210 40% 98%;
 
-  --secondary: 153 98% 31%;
-  /* #029c58 Emerald Green */
+  --secondary: 148 86% 34%;
+  /* #0ca052 Custom Green */
   --secondary-foreground: 210 40% 98%;
 
   --muted: 210 40% 96.1%;
